--- a/po/gl.po
+++ b/po/gl.po
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-09-02 05:30+0000\n"
+"X-Launchpad-Export-Date: 2017-09-03 05:44+0000\n"
 "X-Generator: Launchpad (build 18446)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -27,11 +27,11 @@ msgstr "Engadir ou retirar aplicativos do menú"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Engadir _Iniciador"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Engadir _directorio"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
@@ -39,7 +39,7 @@ msgstr "Engadir _separador"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Nome xenérico do aplicativo, por exemplo «Navegador web»."
 
 #: ../data/ui/MenulibreWindow.ui.h:5
 msgid "Generic Name"
@@ -52,10 +52,14 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Lista de contornos que non deberían mostrar esta entrada. Só pode usar esta "
+"clave se «OnlyShowIn» non está estabelecido.\n"
+"Os valores posibeis inclúen: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
-msgstr ""
+msgstr "Non se mostra en"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid ""
@@ -65,10 +69,15 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"Lista de contornos que deberían mostrar esta entrada. Outros contornos non "
+"mostrarán esta entrada. Só pode usar esta clave se «OnlyShowIn» non está "
+"estabelecido.\n"
+"Os valores posibeis inclúen: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
-msgstr ""
+msgstr "Só se mostra en"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid ""
@@ -76,14 +85,17 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
+"Ruta a un ficheiro executábel para determinar se o programa está instalado. "
+"Se o ficheiro non está presente ou non é executábel, esta entrada pode non "
+"mostrarse nun menú."
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "Try Exec"
-msgstr ""
+msgstr "Probar o executábel"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "Tipo(s) MIME aceptados por este aplicativo."
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Mimetypes"
@@ -95,6 +107,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
+"Lista de palabras clave que describen esta entrada. Pode usar esta axuda "
+"para buscar entradas. Estas non son para mostrar e non deberían ser "
+"redundantes cos valores do Name ou GenericName."
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "Keywords"
@@ -108,7 +123,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Startup WM Class"
-msgstr ""
+msgstr "Clase WM de inicio"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid ""
@@ -130,15 +145,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBUS activábel"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Invalid desktop files detected! Please see details"
-msgstr ""
+msgstr "Detectáronse ficheiros de escritorio incorrectos. Vexa os detalles"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
-msgstr ""
+msgstr "Explorar iconas..."
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Browse Files..."
@@ -148,11 +163,11 @@ msgstr "Explorar ficheiros…"
 #: ../menulibre/MenulibreApplication.py:248
 #: ../menulibre/MenulibreApplication.py:287
 msgid "MenuLibre"
-msgstr ""
+msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Save Launcher"
-msgstr ""
+msgstr "Gardar o Iniciador"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:354
 msgid "Undo"
@@ -168,7 +183,7 @@ msgstr "Reverter"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Test Launcher"
-msgstr ""
+msgstr "Iniciador de proba"
 
 #: ../data/ui/MenulibreWindow.ui.h:34 ../menulibre/MenulibreApplication.py:382
 msgid "Delete"
@@ -192,11 +207,11 @@ msgstr "Ordenar"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Nome do ficheiro</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "<big><b>Application Name</b></big>"
-msgstr ""
+msgstr "<big><b>Nome do aplicativo</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Application Name"
@@ -204,7 +219,7 @@ msgstr "Nome do aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Application Comment"
-msgstr ""
+msgstr "Comentario do aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:43 ../menulibre/MenulibreApplication.py:728
 msgid "Description"
@@ -225,7 +240,7 @@ msgstr "Orde"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "The working directory."
-msgstr ""
+msgstr "Cartafol de traballo."
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Working Directory"
@@ -233,7 +248,7 @@ msgstr "Directorio de traballo"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Información do aplicativo</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "If set to \"True\", the program will be ran in a terminal window."
@@ -241,7 +256,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Run in terminal"
-msgstr ""
+msgstr "Executar nun terminal"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid ""
@@ -251,7 +266,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Use startup notification"
-msgstr ""
+msgstr "Usar notificiación de inicio"
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid ""
@@ -261,7 +276,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "Hide from menus"
-msgstr ""
+msgstr "Ocultar dos menús"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "<b>Options</b>"
@@ -289,7 +304,7 @@ msgstr "Nome"
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Select an icon…"
-msgstr ""
+msgstr "Seleccionar unha icona..."
 
 #: ../data/ui/MenulibreWindow.ui.h:63 ../menulibre/Dialogs.py:62
 #: ../menulibre/Dialogs.py:85 ../menulibre/Dialogs.py:101
@@ -304,7 +319,7 @@ msgstr "Aplicar"
 
 #: ../data/ui/MenulibreWindow.ui.h:65
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>Seleccionar unha icona</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Search"
@@ -316,11 +331,11 @@ msgstr "columna"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr ""
+msgstr "Rexistro - Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
-msgstr ""
+msgstr "Buscar termos..."
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
@@ -329,21 +344,23 @@ msgstr "Mostrar as mensaxes de depuración"
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/Dialogs.py:37
 msgid "About MenuLibre"
-msgstr ""
+msgstr "Sobre o MenuLibre"
 
 #: ../menulibre/Dialogs.py:40
 msgid "Copyright © 2012-2015 Sean Davis"
-msgstr ""
+msgstr "Dereitos de autor © 2012-2015 Sean Davis"
 
 #: ../menulibre/Dialogs.py:55
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Desexa ler o manual en liña do MenuLibre?"
 
 #: ../menulibre/Dialogs.py:56
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Será reencamiñado ao sitio web coa documentación onde as páxinas de axuda "
+"son mantidas."
 
 #: ../menulibre/Dialogs.py:63
 msgid "Read Online"
@@ -355,11 +372,11 @@ msgstr "Documentación en liña"
 
 #: ../menulibre/Dialogs.py:75
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Desexa gardar os cambios antes de pechar?"
 
 #: ../menulibre/Dialogs.py:76
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "Se non garda o iniciador perderanse todos os cambios."
 
 #: ../menulibre/Dialogs.py:83 ../menulibre/Dialogs.py:99
 msgid "Save Changes"
@@ -376,11 +393,11 @@ msgstr "Gardar"
 
 #: ../menulibre/Dialogs.py:90
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "Desexa gardar os cambios antes de saír do iniciador?"
 
 #: ../menulibre/Dialogs.py:92
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "Se non garda o iniciador perderanse todos os cambios."
 
 #: ../menulibre/Dialogs.py:106
 msgid "This cannot be undone."
@@ -388,17 +405,19 @@ msgstr "Non é posíbel desfacer isto."
 
 #: ../menulibre/Dialogs.py:115
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Confirma o restabelecemento deste Iniciador?"
 
 #: ../menulibre/Dialogs.py:116
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Perderanse todos os cambios desde o último estado gardado e non se poderán "
+"restabelecer automaticamente."
 
 #: ../menulibre/Dialogs.py:125 ../menulibre/Dialogs.py:126
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Restabelecer o Iniciador"
 
 #: ../menulibre/Dialogs.py:133 ../menulibre/MenulibreIconSelection.py:80
 msgid "OK"
@@ -457,60 +476,60 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:57
 msgid "Desktop configuration"
-msgstr ""
+msgstr "Configuración do escritorio"
 
 #: ../menulibre/MenulibreApplication.py:58
 msgid "User configuration"
-msgstr ""
+msgstr "Configuración do usuario"
 
 #: ../menulibre/MenulibreApplication.py:59
 msgid "Hardware configuration"
-msgstr ""
+msgstr "Configuración do hardware"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:61
 msgid "GNOME application"
-msgstr ""
+msgstr "Aplicativo de GNOME"
 
 #: ../menulibre/MenulibreApplication.py:62
 msgid "GTK+ application"
-msgstr ""
+msgstr "GTK+ aplicativo"
 
 #: ../menulibre/MenulibreApplication.py:63
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "Configuración do usuario de GNOME"
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "Configuración do hardware de GNOME"
 
 #: ../menulibre/MenulibreApplication.py:65
 #: ../menulibre/MenulibreApplication.py:66
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "Configuración do sistema de GNOME"
 
 #. Xfce Specific
 #: ../menulibre/MenulibreApplication.py:68
 #: ../menulibre/MenulibreApplication.py:69
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Elemento do menú do Xfce"
 
 #: ../menulibre/MenulibreApplication.py:70
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Elemento do menú de alto nivel do Xfce"
 
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Configuración de usuario do Xfce"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Configuración do harware do Xfce"
 
 #: ../menulibre/MenulibreApplication.py:73
 #: ../menulibre/MenulibreApplication.py:74
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Configuración do sistema Xfce"
 
 #: ../menulibre/MenulibreApplication.py:122
 #: ../menulibre/MenulibreApplication.py:167
@@ -519,7 +538,7 @@ msgstr "Outro"
 
 #: ../menulibre/MenulibreApplication.py:225
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "Non é posíbel executar MenuLibre como root."
 
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
@@ -527,30 +546,33 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Vexa a <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentación en "
+"liña</a> para obter máis información."
 
 #: ../menulibre/MenulibreApplication.py:325
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "Engadir un _Iniciador..."
 
 #: ../menulibre/MenulibreApplication.py:326
 msgid "Add Launcher..."
-msgstr ""
+msgstr "Engadir un Iniciador..."
 
 #: ../menulibre/MenulibreApplication.py:332
 msgid "Add _Directory..."
-msgstr ""
+msgstr "Engadir un _directorio..."
 
 #: ../menulibre/MenulibreApplication.py:333
 msgid "Add Directory..."
-msgstr ""
+msgstr "Engadir un directorio..."
 
 #: ../menulibre/MenulibreApplication.py:339
 msgid "_Add Separator..."
-msgstr ""
+msgstr "Eng_adir un separador..."
 
 #: ../menulibre/MenulibreApplication.py:340
 msgid "Add Separator..."
-msgstr ""
+msgstr "Engadir un separador..."
 
 #: ../menulibre/MenulibreApplication.py:346
 msgid "_Save"
@@ -574,7 +596,7 @@ msgstr "_Executar"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Executar o Iniciador"
 
 #: ../menulibre/MenulibreApplication.py:381
 msgid "_Delete"
@@ -621,7 +643,7 @@ msgstr "Avanzado"
 
 #: ../menulibre/MenulibreApplication.py:702
 msgid "ThisEntry"
-msgstr ""
+msgstr "EstaEntrada"
 
 #: ../menulibre/MenulibreApplication.py:720
 msgid "Select a category"
@@ -633,42 +655,45 @@ msgstr "Nome da categoría"
 
 #: ../menulibre/MenulibreApplication.py:807
 msgid "This Entry"
-msgstr ""
+msgstr "Esta entrada"
 
 #: ../menulibre/MenulibreApplication.py:862
 msgid "New Shortcut"
-msgstr ""
+msgstr "Novo atallo"
 
 #: ../menulibre/MenulibreApplication.py:1008
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Seleccionar un directorio de traballo..."
 
 #: ../menulibre/MenulibreApplication.py:1011
 msgid "Select an executable..."
-msgstr ""
+msgstr "Seleccionar un executábel..."
 
 #: ../menulibre/MenulibreApplication.py:1033
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"Non é posíbel engadir subdirectorios ás rutas do sistema preinstaladas."
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1129
 msgid "No Longer Installed"
-msgstr ""
+msgstr "Xa non está instalado"
 
 #: ../menulibre/MenulibreApplication.py:1130
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Este iniciador eliminouse do sistema.\n"
+"Seleccionando o seguinte elemento dispoñíbel."
 
 #: ../menulibre/MenulibreApplication.py:1230
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "Non ten permisos para eliminar este ficheiro."
 
 #: ../menulibre/MenulibreApplication.py:1462
 msgid "New Launcher"
-msgstr ""
+msgstr "Novo Iniciador"
 
 #: ../menulibre/MenulibreApplication.py:1520
 msgid "New Directory"
@@ -677,16 +702,16 @@ msgstr "Novo directorio"
 #: ../menulibre/MenulibreApplication.py:1785
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "Non foi posíbel atopar «%s» na súa RUTA."
 
 #: ../menulibre/MenulibreApplication.py:1807
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Confirma a eliminación do separador?"
 
 #: ../menulibre/MenulibreApplication.py:1810
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr ""
+msgstr "Confirma a eliminación de «%s»?"
 
 #: ../menulibre/MenulibreApplication.py:1866
 #, python-format
@@ -697,18 +722,23 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"A biblioteca subxacente fallou analizando os seguintes ficheiros de "
+"escritorio e polo tanto non se mostrarán no menulibre. Pescude este problema "
+"co mantedor asociado ao paquete:\n"
+"\n"
+"%s"
 
 #: ../menulibre/MenulibreApplication.py:1872
 msgid "All desktop files have been parsed successfully."
-msgstr ""
+msgstr "Todos os ficheiros do escritorio analizáronse correctamente."
 
 #: ../menulibre/MenulibreApplication.py:1901
 msgid "Check for bad desktop files"
-msgstr ""
+msgstr "Buscar ficheiros de escritorio defectuosos"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
-msgstr ""
+msgstr "Seleccionar unha imaxe"
 
 #: ../menulibre/MenulibreIconSelection.py:84
 msgid "Images"
@@ -721,16 +751,17 @@ msgstr "Resultados da busca"
 
 #: ../menulibre/MenulibreXdg.py:53
 msgid "New Menu Item"
-msgstr ""
+msgstr "Novo elemento do menú"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
-msgstr ""
+msgstr "Un pequeno resumo que describa este aplicativo."
 
 #: ../menulibre/util.py:455
 #, python-format
 msgid "%s: Unable to load as a key file due to the following error: %s"
 msgstr ""
+"%s: non foi quen de cargar un ficheiro clave debido ao erro seguinte: %s"
 
 #: ../menulibre/util.py:463
 #, python-format
@@ -740,7 +771,7 @@ msgstr ""
 #: ../menulibre/util.py:472
 #, python-format
 msgid "%s: Type key was not found"
-msgstr ""
+msgstr "%s: tipo de clave non atopada"
 
 #: ../menulibre/util.py:475
 #, python-format
@@ -750,12 +781,12 @@ msgstr ""
 #: ../menulibre/util.py:488
 #, python-format
 msgid "%s: Try exec program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s: o programa executábel de proba «%s» non está na RUTA"
 
 #: ../menulibre/util.py:496
 #, python-format
 msgid "%s: Exec key not found"
-msgstr ""
+msgstr "%s: non foi posíbel atopar a clave do executábel"
 
 #: ../menulibre/util.py:502
 msgid ""
@@ -766,11 +797,11 @@ msgstr ""
 #: ../menulibre/util.py:507
 #, python-format
 msgid "%s: Exec program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s: o programa executábel «%s» non está na RUTA"
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: é correcto o ficheiro do escritorio??"
