--- a/po/gl.po
+++ b/po/gl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-09-03 22:30+0000\n"
+"PO-Revision-Date: 2017-09-04 18:48+0000\n"
 "Last-Translator: Marcos Lans <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-09-04 05:53+0000\n"
+"X-Launchpad-Export-Date: 2017-09-05 05:01+0000\n"
 "X-Generator: Launchpad (build 18446)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -296,7 +296,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid "Hide from menus"
-msgstr "Ocultar dos menús"
+msgstr "Ocultar nos menús"
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "<b>Options</b>"
