--- a/po/ru.po
+++ b/po/ru.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2014-04-23 19:57+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2017-12-13 04:49+0000\n"
+"Last-Translator: ned <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-12-13 05:37+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: ru\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -180,7 +180,7 @@ msgstr "DBus-активация"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Invalid desktop files detected! Please see details"
-msgstr ""
+msgstr "Обнаружены некорректные значки запуска! Просмотрите подробности"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Browse Icons…"
@@ -214,7 +214,7 @@ msgstr "Восстановить"
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Test Launcher"
-msgstr ""
+msgstr "Проверка значка запуска"
 
 #: ../data/ui/MenulibreWindow.ui.h:34 ../menulibre/MenulibreApplication.py:382
 msgid "Delete"
@@ -230,11 +230,11 @@ msgstr "Ниже"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Sort alphabetically"
-msgstr ""
+msgstr "По алфавиту"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "Sort"
-msgstr ""
+msgstr "Сортировка"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "<small><i>Filename</i></small>"
@@ -387,7 +387,7 @@ msgstr "столбец"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Log - Menulibre"
-msgstr ""
+msgstr "Журнал Menulibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid "Search terms…"
@@ -645,11 +645,11 @@ msgstr "_Восстановить"
 
 #: ../menulibre/MenulibreApplication.py:374
 msgid "_Execute"
-msgstr ""
+msgstr "_Выполнить"
 
 #: ../menulibre/MenulibreApplication.py:375
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Выполнить запуск"
 
 #: ../menulibre/MenulibreApplication.py:381
 msgid "_Delete"
@@ -754,7 +754,7 @@ msgstr "Новая папка"
 #: ../menulibre/MenulibreApplication.py:1785
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "Не удалось найти \"%s\" в расположениях переменной PATH."
 
 #: ../menulibre/MenulibreApplication.py:1807
 msgid "Are you sure you want to delete this separator?"
@@ -774,14 +774,19 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Следующие значки запуска не смогли быть проанализированы\n"
+"основной библиотекой и не будут отображаться в Menulibre -\n"
+"попробуйте решить проблему вместе с сопровождающим пакет:\n"
+"\n"
+"%s"
 
 #: ../menulibre/MenulibreApplication.py:1872
 msgid "All desktop files have been parsed successfully."
-msgstr ""
+msgstr "Все значки запуска успешно проанализированы."
 
 #: ../menulibre/MenulibreApplication.py:1901
 msgid "Check for bad desktop files"
-msgstr ""
+msgstr "Проверка корректности значков запуска"
 
 #: ../menulibre/MenulibreIconSelection.py:76
 msgid "Select an image"
@@ -808,49 +813,54 @@ msgstr "Краткое описание программы"
 #, python-format
 msgid "%s: Unable to load as a key file due to the following error: %s"
 msgstr ""
+"%s: Не удалось загрузить в качестве ключевого файла из-за следующей ошибки: "
+"%s"
 
 #: ../menulibre/util.py:463
 #, python-format
 msgid "%s: Start group is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "%s: Неправильная группа запуска - текущая '%s', должна быть '%s'"
 
 #: ../menulibre/util.py:472
 #, python-format
 msgid "%s: Type key was not found"
-msgstr ""
+msgstr "%s: Ключ типа не найден"
 
 #: ../menulibre/util.py:475
 #, python-format
 msgid "%s: Type is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "%s: Неправильный тип - текущий '%s', должен быть '%s'"
 
 #: ../menulibre/util.py:488
 #, python-format
 msgid "%s: Try exec program '%s' has not been found in the PATH"
 msgstr ""
+"%s: Путь проверки программы '%s' не найден в расположениях переменной PATH"
 
 #: ../menulibre/util.py:496
 #, python-format
 msgid "%s: Exec key not found"
-msgstr ""
+msgstr "%s: Ключ команды запуска не найден"
 
 #: ../menulibre/util.py:502
 msgid ""
 "%s: Exec program '%' is not a valid shell command according to "
 "GLib.shell_parse_argv, error: %s"
 msgstr ""
+"%s: Команда '%' не является допустимой командой оболочки согласно "
+"GLib.shell_parse_argv, ошибка: %s"
 
 #: ../menulibre/util.py:507
 #, python-format
 msgid "%s: Exec program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s: Исполняемый файл '%s' не найден в расположениях переменной PATH"
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
 #: ../menulibre/util.py:512
 #, python-format
 msgid "%s: Desktop file is valid??"
-msgstr ""
+msgstr "%s: Значок запуска корректен?"
 
 #~ msgid "_Edit"
 #~ msgstr "_Правка"
