--- a/po/cs.po
+++ b/po/cs.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
 "PO-Revision-Date: 2013-05-29 03:05+0000\n"
 "Last-Translator: k3dar7 <k3dar7@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:28+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: cs\n"
 
 #: ../menulibre.desktop.in.h:1
