--- a/po/da.po
+++ b/po/da.po
@@ -6,15 +6,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-10-03 21:52+0000\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
+"PO-Revision-Date: 2017-10-02 20:47+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-10-04 04:54+0000\n"
-"X-Generator: Launchpad (build 18471)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:28+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: da\n"
 
 #: ../menulibre.desktop.in.h:1
