--- a/po/de.po
+++ b/po/de.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-08-10 13:30+0000\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
+"PO-Revision-Date: 2014-06-05 15:45+0000\n"
 "Last-Translator: Tobias Bannert <tobannert@gmail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-08-11 05:35+0000\n"
-"X-Generator: Launchpad (build 18446)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:28+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
