--- a/po/gl.po
+++ b/po/gl.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-09-04 18:48+0000\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
+"PO-Revision-Date: 2017-09-02 02:08+0000\n"
 "Last-Translator: Marcos Lans <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-09-05 05:01+0000\n"
-"X-Generator: Launchpad (build 18446)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:28+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
