--- a/po/pl.po
+++ b/po/pl.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-08-22 12:21+0000\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
+"PO-Revision-Date: 2014-05-20 10:28+0000\n"
 "Last-Translator: Piotr Strębski <strebski@gmail.com>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-08-23 05:30+0000\n"
-"X-Generator: Launchpad (build 18446)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:29+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
