--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
 "PO-Revision-Date: 2014-03-28 04:04+0000\n"
 "Last-Translator: leo523 <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:29+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: pt_BR\n"
 
 #: ../menulibre.desktop.in.h:1
