--- a/po/ru.po
+++ b/po/ru.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
-"PO-Revision-Date: 2017-12-13 04:49+0000\n"
-"Last-Translator: ned <Unknown>\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
+"PO-Revision-Date: 2014-04-23 19:57+0000\n"
+"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-12-13 05:37+0000\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:29+0000\n"
 "X-Generator: Launchpad (build 18511)\n"
 "Language: ru\n"
 
