--- a/po/sv.po
+++ b/po/sv.po
@@ -9,15 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2017-04-21 20:25-0400\n"
+"POT-Creation-Date: 2017-12-13 05:38+0000\n"
 "PO-Revision-Date: 2015-06-05 15:16+0000\n"
 "Last-Translator: Påvel Nicklasson <Unknown>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-04-23 05:41+0000\n"
-"X-Generator: Launchpad (build 18361)\n"
+"X-Launchpad-Export-Date: 2017-12-14 05:29+0000\n"
+"X-Generator: Launchpad (build 18511)\n"
 "Language: sv\n"
 
 #: ../menulibre.desktop.in.h:1
