--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,2 @@
-Copyright (C) 2012-2015 Sean Davis <smd.seandavis@gmail.com>
+Copyright (C) 2012-2018 Sean Davis <smd.seandavis@gmail.com>
+Copyright (C) 2016-2018 OmegaPhil <OmegaPhil@startmail.com>
