--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-UNRELEASED, MenuLibre 2.1.5
+05 Feb 2018, MenuLibre 2.1.5
+
 - New Features:
   . Added support for the Budgie and KDE Plasma desktop environments
   . Improved support for the MATE desktop environment
